Bug 818741: cast the 'arg' argument of LOG_ERROR_OR_EXIT and LOG_ERROR to void * via an intermediate cast to PRWord to avoid the gcc compiler warning "cast to pointer from integer of different size". Declare the error/errorCode argument of cert_AddToVerifyLog as a (signed) long because NSS/NSPR error codes are negative numbers. r=mentovai. Modified Files: 	lib/certdb/certi.h lib/certhigh/certvfy.c